--- a/style/block--header.css
+++ b/style/block--header.css
@@ -30,5 +30,5 @@
 .header .header__link {
   font-weight: 500;
   font-size: 12px;
-  color: rgba(73, 80, 87, 0.5);
+  color: #495057;
 }
