--- a/style/block--slider.css
+++ b/style/block--slider.css
@@ -75,7 +75,7 @@
   flex-direction: column;
   align-items: center;
   gap: 50px;
-  color: #fff;
+  color: #f8f9fa;
   text-align: center;
   z-index: 3;
 }
